<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ConnectionFragment">

    <ImageView
        android:id="@+id/imageBloggies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bloggies"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/bloggies_image" />

    <Button
        android:id="@+id/buttonTwitter"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@+id/imageBloggies"
        android:layout_marginTop="150dp"
        android:backgroundTint="#BCB4B4"
        android:text="@string/connection_twitter"
        android:textColor="@color/black"/>
    <Button
        android:id="@+id/buttonFacebook"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonTwitter"
        android:layout_marginTop="15dp"
        android:backgroundTint="#BCB4B4"
        android:text="@string/connexion_facebook"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/buttonBloggies"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonFacebook"
        android:layout_marginTop="15dp"
        android:backgroundTint="#BCB4B4"
        android:text="@string/connexion_bloggies"
        android:textColor="@color/black"/>




</androidx.constraintlayout.widget.ConstraintLayout>