<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TwitterFragment">


    <ImageView
        android:id="@+id/twitterImage"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/twitter"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/twitter_image" />


    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/twitterImage"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="252dp"
        android:autofillHints="nom@gmail.com" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        android:layout_marginTop="20dp"
        android:hint="@string/mot_de_passe"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="335dp" />

    <Button
        android:id="@+id/connexionButtonT"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#BCB4B4"
        android:text="@string/connexion"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"/>



</androidx.constraintlayout.widget.ConstraintLayout>