<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".BloggiesFragment">

    <ImageView
        android:id="@+id/imageBloggies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bloggies"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/bloggies_image" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:hint="@string/e_mail_hint"
        app:layout_constraintTop_toBottomOf="@+id/imageBloggies"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:hint="@string/login_hint"
        app:layout_constraintTop_toBottomOf="@id/editTextTextEmailAddress2"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:hint="@string/password_hint"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:hint="Confimation ?"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/buttonInscription"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="150dp"
        android:backgroundTint="#BCB4B4"
        android:text="@string/inscription_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:textColor="@color/black"/>



</androidx.constraintlayout.widget.ConstraintLayout>